--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Vocable</title>
     <link rel="stylesheet" href="build/style.css">
-    <link rel="stylesheet" href="build/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/f640278617.js"></script>
   </head>
   <body>
     <div class="container">
