--- a/index.html
+++ b/index.html
@@ -4,62 +4,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Vocable</title>
-    <link rel="stylesheet" href="build/style.css">
+    <link 
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    >
     <script src="https://use.fontawesome.com/f640278617.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div id="exercises">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>Exercises</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div id="exercisesTable" class="col-md-12"></div>
+      <div class="row">
+        <div class="col-md-12" id="header">
         </div>
       </div>
-
-      <div id="exercise">
-        <div class="row">
-          <div id="exerciseContent" class="col-md-12">
-            <p class="lead">
-              <i id="exitButton" class="fa fa-chevron-left"></i>
-              <span id="questionId" class="lead"></span>
-            </p>
-            <h3 id="question"></h3>
-            <p id="answer"></p>
-          </div>
-        </div>
+      <div class="row">
+        <div class="col-md-12" id="content"></div>
       </div>
     </div>
 
     <footer class="footer">
       <div class="container">
         <div class="row buttons">
-          <div class="col-xs-6">
-            <button class="btn btn-default" type="button" id="leftButton">
-            </button>
+          <div class="col-xs-6" id="leftButton">
           </div>
-          <div class="col-xs-6">
-            <button class="btn btn-default" type="button" id="rightButton">
-            </button>
+          <div class="col-xs-6" id="rightButton">
           </div>
         </div>
 
         <div class="row stats">
           <div class="col-md-12">
-            <div class="progress">
-              <div id="passCount" class="progress-bar progress-bar-success" style="width: 0%"> </div>
-              <div id="failCount" class="progress-bar progress-bar-danger" style="width: 0%"></div>
-              <div id="unseenCount" class="progress-bar progress-bar-default" style="width: 100%"></div>
+            <div class="progress" id="statusBar">
+              <div class="progress-bar progress-bar-success" style="width: 0%"> </div>
+              <div class="progress-bar progress-bar-danger" style="width: 0%"></div>
+              <div class="progress-bar progress-bar-default" style="width: 100%"></div>
             </div>
           </div>
         </div>
       </div>
     </footer>
 
-    <script type="text/javascript" src="build/client.js"></script>
-    <script src="http://localhost:35729/livereload.js"></script>
+    <script type="text/javascript" src="client.js"></script>
   </body>
 </html>
